working on multivar case